--- a/loading.html
+++ b/loading.html
@@ -29,7 +29,6 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-    #loadingTip { margin-top: 10px; }
     #errorContainer {
       display: none;
       margin-top: 20px;
@@ -57,57 +56,18 @@
 <body>
   <h2 id="title">正在生成你的专属人格分析报告…</h2>
   <div class="spinner"></div>
-  <p id="loadingTip">预计需要 60-120 秒，请耐心等待…</p>
   <div id="errorContainer"></div>
 
   <script>
     const birth_date = sessionStorage.getItem('birth_date') || '';
     const birth_time = sessionStorage.getItem('birth_time') || '';
     const birth_city = sessionStorage.getItem('birth_city') || '';
-    const mbti = sessionStorage.getItem('mbti') || '';
-    const tipEl = document.getElementById('loadingTip');
+    const mbti       = sessionStorage.getItem('mbti')       || '';
     const WEBHOOK_URL = 'https://hook.us2.make.com/qc2cyluvofpxxcwiaqsiap59uc9quex8';
-
-    let seconds = 0;
-
-    function startPolling(taskId) {
-      function checkStatus() {
-        fetch(`https://personality-analyzer-theta.vercel.app/api/status?taskId=${taskId}`)
-          .then(res => res.json())
-          .then(data => {
-            console.log('[轮询] 当前状态：', data.status);
-            if (data.status === 'done') {
-              sessionStorage.setItem('analysisResult', data.result);
-              window.location.href = 'result.html';
-            } else if (data.status === 'pending') {
-              setTimeout(checkStatus, 1000);
-            } else if (data.status === 'failed') {
-              showError("分析失败，请稍后重试。");
-            } else {
-              showError("任务未找到或已失败，请返回重新提交。");
-            }
-          })
-          .catch(err => {
-            console.error('状态查询失败:', err);
-            showError("查询出错，请稍后重试...");
-          });
-      }
-
-      checkStatus();
-
-      setInterval(() => {
-        seconds++;
-        tipEl.textContent = `已等待 ${seconds} 秒，预计需要 60-120 秒，请耐心等待…`;
-        if (seconds > 180) { 
-          showError("已等待超过 3 分钟，请返回首页重试。");
-        }
-      }, 1000);
-    }
 
     function showError(msg) {
       document.getElementById('title').textContent = '出错了：';
       document.querySelector('.spinner').style.display = 'none';
-      tipEl.style.display = 'none';
       const ec = document.getElementById('errorContainer');
       ec.innerHTML = `
         <pre>${msg}</pre>
@@ -117,7 +77,7 @@
       ec.style.display = 'block';
     }
 
-    // 直接调用 Make Webhook 提交数据
+    // 同步调用：直接拿到 result 后跳转
     fetch(WEBHOOK_URL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
@@ -125,14 +85,13 @@
     })
     .then(res => res.json())
     .then(data => {
-      const { taskId } = data;
-      if (!taskId) throw new Error('未收到有效的 taskId');
-      sessionStorage.setItem('taskId', taskId);
-      startPolling(taskId);
+      if (!data.result) throw new Error('后台未返回 result 字段');
+      sessionStorage.setItem('analysisResult', data.result);
+      window.location.href = 'result.html';
     })
     .catch(err => {
       console.error('提交任务失败:', err);
-      showError(`${err.name}: ${err.message}`);
+      showError(err.message || '未知错误');
     });
   </script>
 </body>
